--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,12 @@
 			<artifactId>mapstruct</artifactId>
 			<version>1.5.0.Final</version> <!-- Use the latest version -->
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.7</version>
+		</dependency>
 		<dependency>
 			<groupId>com.tngtech.archunit</groupId>
 			<artifactId>archunit-junit5</artifactId>
